cmake_minimum_required(VERSION 3.0.0)
project(EXERISES)
set(CMAKE_SUPPRESS_REGENERATION true)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3")
include_directories(include)
add_subdirectory(Exercise_0)
add_subdirectory(Exercise_1)
add_subdirectory(Exercise_2)
add_subdirectory(Exercise_3)
